# tornasol

./: .gitignore  meson.build  meson.options  oldwindow.cc  readme.md
.cache/clangd/index/: IMG.c.C0CC595B209FC69E.idx  IMG_WIC.c.A0DAB7BA76D896E7.idx  IMG_avif.c.1E3B8BC5639C36F3.idx  IMG_bmp.c.8FF5344F022261F7.idx  IMG_gif.c.25E49809C978294E.idx  IMG_jpg.c.69324CBE4E530529.idx  IMG_jxl.c.62D2F043C2B6D061.idx  IMG_lbm.c.74CBDE802A2E18D8.idx  IMG_pcx.c.1EE8D40F9209C8B3.idx  IMG_png.c.28599F3B1E86FC93.idx  IMG_pnm.c.4A43FC8B55EB655B.idx  IMG_qoi.c.D282194EF87C02C7.idx  IMG_stb.c.7E19D067E1C2E299.idx  IMG_svg.c.5BABEB9B727380AF.idx  IMG_tga.c.4566D1E0C41E1B2E.idx  IMG_tif.c.9FC0B8976F3FAC5C.idx  IMG_webp.c.CCBDA010E8C76E40.idx  IMG_xcf.c.7F8E4CF0B5AC0E0C.idx  IMG_xpm.c.73D15A1E54E0D35C.idx  IMG_xv.c.3B5481325F5212E1.idx  SDL.c.8E3115B6883F990D.idx  SDL_DirectFB_WM.c.11286AAFD2931DAA.idx  SDL_DirectFB_dyn.c.C73131AC04341522.idx  SDL_DirectFB_events.c.A7F7F757A579330E.idx  SDL_DirectFB_modes.c.B9FC6746C18C44DC.idx  SDL_DirectFB_mouse.c.A514742B4AA1447A.idx  SDL_DirectFB_opengl.c.CDA131BADF395490.idx  SDL_DirectFB_render.c.B1D60DE8586B662D.idx  SDL_DirectFB_shape.c.785BF48FEF82F9A4.idx  SDL_DirectFB_video.c.82937CA3D2BC2DDB.idx  SDL_DirectFB_window.c.5A40BB2D5FD18C14.idx  SDL_RLEaccel.c.614F748F2A15F9BC.idx  SDL_RLEaccel_c.h.F7D67E6B3E686DDE.idx  SDL_aaudio.c.7DC996B74C48F6D5.idx  SDL_alsa_audio.c.A8D9B77D0C2F0A48.idx  SDL_androidaudio.c.9323BF842E4A772E.idx  SDL_androidclipboard.c.DB8D304B34184C44.idx  SDL_androidevents.c.E699957817825C05.idx  SDL_androidgl.c.2717194BBACD022D.idx  SDL_androidkeyboard.c.9C60F30B6DAD0336.idx  (+1105 more)
include/tornasol/: tornasol.hh  type.hh
include/tornasol/common/: common.hh  def.hh  error.hh  matrix.hh  size.hh  transform.hh  types.hh  vector.hh
include/tornasol/core/: core.hh  engine.hh  opengl.hh  opengl_proc.hh  types.hh
include/tornasol/font/: font.hh
include/tornasol/platform/: input.hh  platform.hh  window.hh
src/: engine.cc  opengl.cc  window.cc
tests/: meson.build
tests/basic/: basic.cc  meson.build
tests/prototype/: main.cc  meson.build  prototype.cc  prototype.desing
tests/test_standalone/: meson.build  test_standalone.cc
tests/type/: meson.build  type.cc
